<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">
    <matthew.pecompass.components.views.NoCollisionViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/vp_pagers"></matthew.pecompass.components.views.NoCollisionViewPager>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:id="@+id/rg_group">
        <RadioButton
            android:drawableTop="@drawable/selector_btn_account"
            style="@style/RBstyle"
            android:text="@string/btn_rating"
            android:id="@+id/rb_rate"
            />
        <RadioButton
            android:drawableTop="@drawable/selector_btn_rate"
            style="@style/RBstyle"
            android:text="@string/btn_account"
            android:id="@+id/rb_account"
            />

        <RadioButton
            android:drawableTop="@drawable/selector_btn_search"
            style="@style/RBstyle"
            android:text="@string/btn_search"
            android:id="@+id/rb_search"
            />
        <RadioButton
            android:drawableTop="@drawable/selector_btn_community"
            style="@style/RBstyle"
            android:text="@string/btn_share"
            android:id="@+id/rb_share"
            />
    </RadioGroup>


</LinearLayout>
